feature/accounts-improve-style

--- a/accounts/templates/registration/register.html
+++ b/accounts/templates/registration/register.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
-  <h2>Inscription</h2>
-  <form method="post" enctype="multipart/form-data">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">S'inscrire</button>
-  </form>
+<h2 class="text-2xl font-semibold mb-4">Inscription</h2>
+<form method="post" enctype="multipart/form-data" class="space-y-4 bg-white p-6 rounded shadow">
+  {% csrf_token %}
+  {{ form.as_p }}
+  <button type="submit" class="bg-indigo-600 text-white px-4 py-2 rounded hover:bg-indigo-700">S'inscrire</button>
+</form>
 {% endblock %}
