--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
-  <h2>Connexion</h2>
-  <form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Se connecter</button>
-  </form>
+<h2 class="text-2xl font-semibold mb-4">Connexion</h2>
+<form method="post" class="space-y-4 bg-white p-6 rounded shadow">
+  {% csrf_token %}
+  {{ form.as_p }}
+  <button type="submit" class="bg-indigo-600 text-white px-4 py-2 rounded hover:bg-indigo-700">Se connecter</button>
+</form>
 {% endblock %}
