--- a/accounts/templates/registration/password_change.html
+++ b/accounts/templates/registration/password_change.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
-  <h2>Changer le mot de passe</h2>
-  <form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Valider</button>
-  </form>
+<h2 class="text-2xl font-semibold mb-4">Changer le mot de passe</h2>
+<form method="post" class="space-y-4 bg-white p-6 rounded shadow">
+  {% csrf_token %}
+  {{ form.as_p }}
+  <button type="submit" class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700">Valider</button>
+</form>
 {% endblock %}
