--- a/jobs/templates/jobs/job_list.html
+++ b/jobs/templates/jobs/job_list.html
@@ -7,7 +7,7 @@
     <a href="{% url 'job_detail' job.pk %}" class="block border p-5 rounded-lg shadow hover:shadow-md transition duration-200 mb-6 bg-white hover:bg-gray-50">
       <div class="flex justify-between items-start">
         <h3 class="text-xl font-semibold text-gray-800">{{ job.title }}</h3>
-        <div class="text-blue-500 text-lg">→</div>
+        <div class="text-emerald-500 text-lg">→</div>
       </div>
 
       <p class="text-gray-700 mt-1"><strong>Entreprise :</strong> {{ job.company.name }}</p>
