--- a/accounts/templates/registration/register.html
+++ b/accounts/templates/registration/register.html
@@ -4,6 +4,6 @@
 <form method="post" enctype="multipart/form-data" class="space-y-4 bg-white p-6 rounded shadow">
   {% csrf_token %}
   {{ form.as_p }}
-  <button type="submit" class="bg-indigo-600 text-white px-4 py-2 rounded hover:bg-indigo-700">S'inscrire</button>
+  <button type="submit" class="bg-emerald-600 text-white px-4 py-2 rounded hover:bg-emerald-700">S'inscrire</button>
 </form>
 {% endblock %}
