--- a/jobs/templates/jobs/company_list.html
+++ b/jobs/templates/jobs/company_list.html
@@ -21,7 +21,7 @@
                  class="w-16 h-16 object-cover rounded shadow-sm mt-1" loading="lazy">
           {% else %}
             <div class="w-16 h-16 bg-gray-200 rounded flex items-center justify-center text-gray-500">
-              <span class="text-sm">Aucun visuel</span>
+              <span class="text-sm">@</span>
             </div>
           {% endif %}
 
